# selkies-core

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FIXES_APPLIED.md  FORCE_UPDATE_PLAN.md  MIGRATION_SUMMARY.md  Makefile  PAKE_APPS_STATE_RECOVERY.md  PROJECT_COMPLETION.md  README.md  UPDATE_FEATURE.md  WEBRTC_TODO.md  build.sh  config.example.toml  config.toml  docker-compose.yml  start.sh  test.sh
.github/workflows/: build-release.yml  ci.yml
benches/: encode.rs
config/: ivnc.example.toml  selkies-core.example.toml
docs/: DEPLOYMENT.md  DESIGN.md  PROTOCOL.md
examples/: ivnc.example.toml  selkies-core.example.toml
patches/webrtc-dtls-0.10.0/src/flight/: flight0.rs
src/: args.rs  clipboard.rs  cursor_overlay.rs  file_upload.rs  input.rs  lib.rs  main.rs  runtime_settings.rs  system_clipboard.rs
src/audio/: mod.rs  runtime.rs
src/capture/: capturer.rs  frame.rs  mod.rs  xshm.rs
src/compositor/: headless.rs  mod.rs  state.rs
src/compositor/grabs/: mod.rs  move_grab.rs  resize_grab.rs
src/compositor/handlers/: compositor.rs  mod.rs  xdg_shell.rs
src/config/: mod.rs  ui.rs
src/display/: allocator.rs  detector.rs  manager.rs  mod.rs  xvfb.rs
src/encode/: encoder.rs  hasher.rs  mod.rs
src/gstreamer/: capture.rs  encoder.rs  mod.rs  pipeline.rs
src/input/: injector.rs  mod.rs
src/mcp/: frame_capture.rs  keyboard.rs  mod.rs  tools.rs
src/pake_apps/: api.rs  mod.rs  state_recovery.rs  webview.rs  webview_manager_process.rs
src/transport/: codec.rs  mod.rs  signaling_server.rs  websocket.rs
src/web/: embedded_assets.rs  http_server.rs  mod.rs  shared.rs
src/webrtc/: data_channel.rs  media_track.rs  mod.rs  peer_connection.rs  rtc_session.rs  session.rs  signaling.rs  tcp_framing.rs
web/console/: index.html
web/ivnc/: .gitignore  README.md  index.html  ivnc-core.js  ivnc-wr-core.js  manifest.json  package-lock.json  sw.js  vite.config.js
web/ivnc/lib/: input.js  input2.js  signaling.js  webrtc.js
web/ivnc/nginx/: footer.html
web/selkies/: index.html  selkies-core.js  selkies-wr-core.js  selkies-ws-core.js
web/selkies/lib/: input.js  webrtc.js
