[package]
name = "selkies-core"
version = "0.2.0"
edition = "2021"
description = "Rust-based Selkies streaming core - WebRTC + GStreamer, X11"
authors = ["Selkies Team"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# X11 bindings
x11rb = { version = "0.13", features = ["allow-unsafe-code", "xtest", "xfixes", "shm"] }

# Image encoding (cursor PNG)
image = { version = "0.24", default-features = false, features = ["png"] }

# Hash for change detection
xxhash-rust = { version = "0.8", features = ["xxh64"] }

# Base64 encoding
base64 = "0.22"

# Async utilities
futures = "0.3"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }

# Concurrency
crossbeam = "0.8"
parking_lot = "0.12"

# Logging
env_logger = "0.10"
log = "0.4"

# File watching for configuration reload
notify = { version = "6.0" }

# HTTP server for static files / health checks
axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.4" }
hyper = { version = "1.0" }
tower-http = { version = "0.5", features = ["fs"] }

# Embedded web assets
rust-embed = "8.5"
mime_guess = "2.0"

# UUID for session tracking
uuid = { version = "1.0", features = ["v4"] }

# Metrics
prometheus = "0.13"

# Compression for network efficiency
flate2 = "1.0"
miniz_oxide = "0.7"

# Audio capture/encoding (optional)
cpal = { version = "0.15", optional = true }
opus = { version = "0.3", optional = true }
libpulse-simple-binding = { version = "2.28", optional = true }
libpulse-binding = { version = "2.28", optional = true }

# Memory management
mimalloc = "0.1"
libc = "0.2"

# WebRTC stack
webrtc = "0.11"
webrtc-util = "0.9"
webrtc-ice = "0.11"
webrtc-dtls = "0.9"
webrtc-srtp = "0.13"
webrtc-media = "0.8"
webrtc-sctp = "0.10"
ureq = "2"

# GStreamer bindings
gstreamer = "0.22"
gstreamer-app = "0.22"
gstreamer-video = "0.22"
gstreamer-rtp = "0.22"
glib = "0.19"

# RTP handling
rtp = "0.10"
bytes = "1.5"
hmac = "0.12"
sha1 = "0.10"

[build-dependencies]
cc = "1.0"

[features]
default = []
audio = ["cpal", "opus"]
pulseaudio = ["opus", "libpulse-simple-binding", "libpulse-binding"]

# Hardware acceleration options
vaapi = []       # Intel VA-API hardware encoding
nvenc = []       # NVIDIA NVENC hardware encoding
qsv = []         # Intel Quick Sync Video

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
criterion = "0.5"
