[package]
name = "ivnc"
version = "0.2.0"
edition = "2021"
description = "iVnc - WebRTC + GStreamer + Wayland compositor streaming core"
authors = ["iVnc Team"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Wayland compositor
smithay = { git = "https://github.com/Smithay/smithay.git", rev = "3d3f9e359352d95cffd1e53287d57df427fcbd34", default-features = false, features = ["wayland_frontend", "desktop", "renderer_pixman"] }
calloop = "0.14.0"
xkbcommon = { version = "0.9.0", features = ["wayland"] }
bitflags = "2"
pixman = "0.2"

# Image encoding (cursor PNG)
image = { version = "0.24", default-features = false, features = ["png"] }

# Hash for change detection
xxhash-rust = { version = "0.8", features = ["xxh64"] }

# Base64 encoding
base64 = "0.22"

# Async utilities
futures = "0.3"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }

# Concurrency
crossbeam = "0.8"
parking_lot = "0.12"

# Logging
env_logger = "0.10"
log = "0.4"

# File watching for configuration reload
notify = { version = "6.0" }

# HTTP server for static files / health checks
axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.4" }
hyper = { version = "1.0", features = ["server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
tower-http = { version = "0.5", features = ["fs"] }

# Embedded web assets
rust-embed = "8.5"
mime_guess = "2.0"

# UUID for session tracking
uuid = { version = "1.0", features = ["v4"] }

# Metrics
prometheus = "0.13"

# Compression for network efficiency
flate2 = "1.0"
miniz_oxide = "0.7"

# Audio capture/encoding (optional)
cpal = { version = "0.15", optional = true }
opus = { version = "0.3", optional = true }
libpulse-simple-binding = { version = "2.28", optional = true }
libpulse-binding = { version = "2.28", optional = true }

# Memory management
mimalloc = "0.1"
libc = "0.2"

# WebRTC stack (str0m Sans-I/O)
str0m = { git = "https://github.com/algesten/str0m", tag = "0.16.2", default-features = false, features = ["aws-lc-rs"] }
ureq = "2"

# GStreamer bindings
gstreamer = "0.22"
gstreamer-app = "0.22"
gstreamer-video = "0.22"
gstreamer-rtp = "0.22"
glib = "0.19"

# Binary data handling
bytes = "1.5"
hmac = "0.12"
sha1 = "0.10"

[build-dependencies]
cc = "1.0"

[features]
default = ["pulseaudio"]
audio = ["cpal", "opus"]
pulseaudio = ["opus", "libpulse-simple-binding", "libpulse-binding"]

# Hardware acceleration options
vaapi = []       # Intel VA-API hardware encoding
nvenc = []       # NVIDIA NVENC hardware encoding
qsv = []         # Intel Quick Sync Video

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
criterion = "0.5"

